force-app/main/default/objects/CF_LogEvent__e/CF_LogEvent__e.object-meta.xml
<CustomObject>
    <label>CF_LogEvent</label>
    <pluralLabel>CF_LogEvents</pluralLabel>
</CustomObject>