force-app/main/default/objects/CF_LogEvent__e/fields/Gov_Limits_in_Execution_Context__c.field-meta.xml
<CustomField>
    <fullName>Gov_Limits_in_Execution_Context__c</fullName>
    <label>Gov Limits in Execution Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>