force-app/main/default/objects/CF_LogEvent__e/fields/Log_Name__c.field-meta.xml
<CustomField>
    <fullName>Log_Name__c</fullName>
    <label>Log Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>