force-app/main/default/objects/CF_LogEvent__e/fields/Log_Time__c.field-meta.xml
<CustomField>
    <fullName>Log_Time__c</fullName>
    <label>Log Time</label>
    <type>DateTime</type>
</CustomField>